--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-md-1 hidden-xs hidden-sm leftButtonDiv fadeIn">
                     <div id="margin">
-                        <button type="button" class="btn btn-link" onclick="openLeftNav();"><span class="glyphicon glyphicon-menu-left leftButton" aria-hidden="true"></span></button>
+                        <button type="button" class="btn btn-link" onclick="simulatePress(37);"><span class="glyphicon glyphicon-menu-left leftButton" aria-hidden="true"></span></button>
                     </div>
                 </div>
                 <div class="col-md-4 col-md-offset-3">
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-md-1 hidden-xs hidden-sm rightButtonDiv col-md-offset-3 fadeIn">
                     <div id="margin">
-                        <button type="button" class="btn btn-link" onclick="openRightNav();"><span class="glyphicon glyphicon-menu-right rightButton" aria-hidden="true"></span></button>
+                        <button type="button" class="btn btn-link" onclick="simulatePress(39);"><span class="glyphicon glyphicon-menu-right rightButton" aria-hidden="true"></span></button>
                     </div>
                 </div>
             </div>
@@ -52,20 +52,20 @@
         </div>
         <div class="row">
             <div class="container col-md-2 col-md-offset-5 text-center">
-                <button type="button" class="btn btn-link" onclick="openBottomNav();"><span class="glyphicon glyphicon-menu-down downbutton" aria-hidden="true"></span></button>
+                <button type="button" class="btn btn-link" onclick="simulatePress(40);"><span class="glyphicon glyphicon-menu-down downbutton" aria-hidden="true"></span></button>
             </div>
         </div>
         </div>
     </body>
     <div id="leftSidenav" class="leftSidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeLeftNav()">Back</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="simulatePress(39)">Back</a>
         <a href="#">About</a>
         <a href="#">Services</a>
         <a href="#">Clients</a>
         <a href="#">Contact</a>
     </div>
     <div id="rightSidenav" class="rightSidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeRightNav()">Back</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="simulatePress(37);">Back</a>
         <a href="#">test</a>
         <a href="#">test</a>
         <a href="#">test</a>
