--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-md-offset-3">
-                    <div class="circle center-block cursorChange" onclick="openLeftNav()">
+                    <div class="circle center-block cursorChange">
                         <div class="circle inner center-block">
                             <img src="images/me.jpg" class="circle inner2 center-block"/>
                         </div>
