--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="js/typed.js/dist/typed.min.js"></script>
         <script src="js/jquery.scrollTo/jquery.scrollTo.min.js"></script>
         <script src="js/index.js"></script>
+        <script src="js/jquery.mobile-1.4.5.min.js"></script>
     </head>
     <body id="body">
         <div class="animate">
