--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
         <link href="css/index_style.css" rel="stylesheet"/>
         <link href="css/font-awesome.min.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
-        <script
-        src="https://code.jquery.com/jquery-2.0.0.min.js"
-        integrity="sha256-1IKHGl6UjLSIT6CXLqmKgavKBXtr0/jJlaGMEkh+dhw="
-        crossorigin="anonymous"></script>
+        <script src="js/jquery-3.1.1.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="js/typed.js/dist/typed.min.js"></script>
         <script src="js/jquery.scrollTo/jquery.scrollTo.min.js"></script>
         <script src="js/index.js"></script>
-        <script src="js/jquery.mobile-1.4.5.min.js"></script>
-
+        <script src="js/jquery.touchSwipe.min.js"></script>
     </head>
+
     <body id="body">
         <div class="animate">
             <div class="row">
