--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
                         <button type="button" class="btn btn-link" onclick="simulatePress(37);"><span class="glyphicon glyphicon-menu-left leftButton" aria-hidden="true"></span></button>
                     </div>
                 </div>
-                <div class="col-md-4 col-md-offset-3">
+                <div class="col-md-1 hidden-xs hidden-sm fadeIn buttonText">
+                    <h2 id="leftText">About</h2>
+                </div>
+                <div class="col-md-4 col-md-offset-2">
                     <div class="circle center-block cursorChange">
                         <div class="circle inner center-block">
                             <img src="images/me.jpg" class="circle inner2 center-block"/>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-1 hidden-xs hidden-sm rightButtonDiv col-md-offset-3 fadeIn">
+                <div class="col-md-1 hidden-xs hidden-sm col-md-offset-2 fadeIn buttonText">
+                    <h2 id="rightText">Playground</h2>
+                </div>
+                <div class="col-md-1 hidden-xs hidden-sm rightButtonDiv fadeIn">
                     <div id="margin">
                         <button type="button" class="btn btn-link" onclick="simulatePress(39);"><span class="glyphicon glyphicon-menu-right rightButton" aria-hidden="true"></span></button>
                     </div>
@@ -54,6 +60,11 @@
         </div>
         <div class="row">
             <div class="container col-md-2 col-md-offset-5 text-center">
+                <h2 id="bottomText">Portfolio</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="container col-md-2 col-md-offset-5 text-center">
                 <button type="button" class="btn btn-link" onclick="simulatePress(40);"><span class="glyphicon glyphicon-menu-down downbutton" aria-hidden="true"></span></button>
             </div>
         </div>
@@ -65,48 +76,7 @@
         <a href="#">Services</a>
         <a href="#">Clients</a>
         <a href="#">Contact</a>
-    </div>
-    <div id="rightSidenav" class="rightSidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="simulatePress(37);">Back</a>
-        <a href="#">test</a>
-        <a href="#">test</a>
-        <a href="#">test</a>
-        <a href="#">test</a>
-    </div>
-    <div id="bottomNav" class="bottomNav">
-        <div class="row portfolio">
-            <div class="col-md-12 thumb">
-                <div class="caption text-center">
-                    <div class="content">
-                        <h1>Graphique</h1>
-                        <button type="button" onclick="location.href='http://data-visualisation-test.herokuapp.com'" class="btn btn-primary">Visit</button>
-                        <button type="button" onclick="location.href='https://github.com/Tehmo3/data_visualisation'" class="btn btn-danger">Source</button>
-                    </div>
-                </div>
-                <img src="images/project1.jpg" width="100%" />
-            </div>
-            <div class="col-md-12 thumb">
-                <div class="caption text-center">
-                    <div class="content">
-                        <h1>Placeholder</h1>
-                        <button type="button" class="btn btn-primary">Visit</button>
-                        <button type="button" class="btn btn-danger">Source</button>
-                    </div>
-                </div>
-                <img src="images/project2.jpg" width="100%" />
-            </div>
-            <div class="col-md-12 thumb">
-                <div class="caption text-center">
-                    <div class="content">
-                        <h1>Placeholder</h1>
-                        <button type="button" class="btn btn-primary">Visit</button>
-                        <button type="button" class="btn btn-danger">Source</button>
-                    </div>
-                </div>
-                <img src="images/project3.jpg" width="100%" />
-            </div>
-        </div>
-        <div class="newback">
+        <div>
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <h1 class="text-center">Lets talk!</h1>
@@ -148,6 +118,47 @@
                     </div>
                 </div>
             </form>
+        </div>
+    </div>
+    <div id="rightSidenav" class="rightSidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="simulatePress(37);">Back</a>
+        <a href="#">test</a>
+        <a href="#">test</a>
+        <a href="#">test</a>
+        <a href="#">test</a>
+    </div>
+    <div id="bottomNav" class="bottomNav">
+        <div class="row portfolio">
+            <div class="col-md-12 thumb">
+                <div class="caption text-center">
+                    <div class="content">
+                        <h1>Graphique</h1>
+                        <button type="button" onclick="location.href='http://data-visualisation-test.herokuapp.com'" class="btn btn-primary">Visit</button>
+                        <button type="button" onclick="location.href='https://github.com/Tehmo3/data_visualisation'" class="btn btn-danger">Source</button>
+                    </div>
+                </div>
+                <img src="images/project1.jpg" width="100%" />
+            </div>
+            <div class="col-md-12 thumb">
+                <div class="caption text-center">
+                    <div class="content">
+                        <h1>Placeholder</h1>
+                        <button type="button" class="btn btn-primary">Visit</button>
+                        <button type="button" class="btn btn-danger">Source</button>
+                    </div>
+                </div>
+                <img src="images/project2.jpg" width="100%" />
+            </div>
+            <div class="col-md-12 thumb">
+                <div class="caption text-center">
+                    <div class="content">
+                        <h1>Placeholder</h1>
+                        <button type="button" class="btn btn-primary">Visit</button>
+                        <button type="button" class="btn btn-danger">Source</button>
+                    </div>
+                </div>
+                <img src="images/project3.jpg" width="100%" />
+            </div>
         </div>
     </div>
 </html>
