--- a/index.html
+++ b/index.html
@@ -59,12 +59,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="container col-md-2 col-md-offset-5 text-center">
+            <div class="swipeText container col-xs-6 col-xs-offset-3 hidden-md hidden-lg text-center fadeIn">
+                <p>Swipe to navigate (right, up or left)!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="container col-md-2 col-md-offset-5 text-center hidden-xs hidden-sm">
                 <h2 id="bottomText">Portfolio</h2>
             </div>
         </div>
         <div class="row">
-            <div class="container col-md-2 col-md-offset-5 text-center">
+            <div class="container col-md-2 col-md-offset-5 text-center hidden-xs hidden-sm">
                 <button type="button" class="btn btn-link" onclick="simulatePress(40);"><span class="glyphicon glyphicon-menu-down downbutton" aria-hidden="true"></span></button>
             </div>
         </div>
