--- a/index.html
+++ b/index.html
@@ -126,11 +126,15 @@
         </div>
     </div>
     <div id="rightSidenav" class="rightSidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="simulatePress(37);">Back</a>
-        <a href="#">test</a>
-        <a href="#">test</a>
-        <a href="#">test</a>
-        <a href="#">test</a>
+        <div class="row vertical-align">
+            <div class="col-md-1">
+                <button type="button" class="btn btn-link" onclick="simulatePress(37);"><span class="glyphicon glyphicon-menu-left backLeft" aria-hidden="true"></span></button>
+            </div>
+            <div class="col-md-10 vertical-center">
+                <p data-height="265" data-theme-id="0" data-slug-hash="PWJPRN" data-default-tab="result" data-user="TehMo3" data-embed-version="2" data-pen-title="PWJPRN" class="codepen">See the Pen <a href="http://codepen.io/TehMo3/pen/PWJPRN/">PWJPRN</a> by Jasper Miles (<a href="http://codepen.io/TehMo3">@TehMo3</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+            </div>
+        </div>
     </div>
     <div id="bottomNav" class="bottomNav">
         <div class="row portfolio">
