--- a/index.html
+++ b/index.html
@@ -76,54 +76,69 @@
         </div>
     </body>
     <div id="leftSidenav" class="leftSidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="simulatePress(39)">Back</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
-        <div>
+        <div class="row about">
+            <div class="col-md-4 col-md-offset-2">
+                <div class="square"></div>
+            </div>
+            <div class="col-md-4">
+                <h3>
+                    Praesent finibus molestie lorem. Nunc condimentum sed neque eget euismod.
+                     In interdum egestas magna vitae molestie.
+                     Proin consectetur auctor nunc eu imperdiet.
+                     Phasellus ullamcorper nunc eu tempor rutrum.
+                     Quisque condimentum eros sit amet augue iaculis, sed tincidunt neque varius.
+                     Integer aliquet tempus sodales. Nulla facilisi.
+                      Maecenas eget neque tincidunt, aliquet leo quis, rutrum lectus.
+                      Proin maximus metus at placerat vehicula. Aliquam rhoncus euismod dignissim.
+                      Vestibulum sed lobortis ex.
+                      Fusce sollicitudin metus quis aliquet gravida.
+                       Fusce tristique euismod lacus, id pulvinar lectus efficitur non.
+                       Phasellus faucibus erat vel metus aliquam porttitor.
+                       Cras interdum rhoncus elit, sit amet pellentesque lorem condimentum vel.
+                </h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <h1 class="text-center">Lets talk!</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h2 class="text-center">Shoot me a message and we can discuss your project (or anything!) </h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <button type="button" class="btn btn-default" onclick="showContactForm();" id="contactButton">Contact Me!</button>
+            </div>
+        </div>
+        <form role="form" id="contactForm" action="mailto:hello@jaspermiles.me" method="post" class="contact-form">
             <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <h1 class="text-center">Lets talk!</h1>
+                <div class="col-md-3 col-md-offset-3">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="Name" autocomplete="off" id="Name" placeholder="Name">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <input type="email" class="form-control" name="email" autocomplete="off" id="email" placeholder="E-mail">
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h2 class="text-center">Shoot me a message and we can discuss your project (or anything!) </h2>
+                    <div class="form-group center-block">
+                        <textarea class="form-control textarea" rows="3" name="Message" id="Message" placeholder="Message"></textarea>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 text-center">
-                    <button type="button" class="btn btn-default" onclick="showContactForm();" id="contactButton">Contact Me!</button>
+                <div class="col-md-6 col-md-offset-3">
+                  <button type="submit" class="btn btn-primary pull-right">Send a message</button>
                 </div>
-                </div>
-            <form role="form" id="contactForm" action="mailto:hello@jaspermiles.me" method="post" class="contact-form">
-                <div class="row">
-                    <div class="col-md-3 col-md-offset-3">
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="Name" autocomplete="off" id="Name" placeholder="Name">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <input type="email" class="form-control" name="email" autocomplete="off" id="email" placeholder="E-mail">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
-                        <div class="form-group center-block">
-                            <textarea class="form-control textarea" rows="3" name="Message" id="Message" placeholder="Message"></textarea>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3">
-                      <button type="submit" class="btn btn-primary pull-right">Send a message</button>
-                    </div>
-                </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
     <div id="rightSidenav" class="rightSidenav">
         <div class="row vertical-align">
@@ -132,7 +147,7 @@
             </div>
             <div class="col-md-10 vertical-center">
                 <p data-height="265" data-theme-id="0" data-slug-hash="PWJPRN" data-default-tab="result" data-user="TehMo3" data-embed-version="2" data-pen-title="PWJPRN" class="codepen">See the Pen <a href="http://codepen.io/TehMo3/pen/PWJPRN/">PWJPRN</a> by Jasper Miles (<a href="http://codepen.io/TehMo3">@TehMo3</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+                <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
             </div>
         </div>
     </div>
