--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-md-1 col-md-offset-11">
+                <button type="button" class="btn btn-link" onclick="simulatePress(39);"><span class="glyphicon glyphicon-menu-right backRight" aria-hidden="true"></span></button>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <h1 class="text-center">Lets talk!</h1>
             </div>
@@ -152,6 +157,11 @@
         </div>
     </div>
     <div id="bottomNav" class="bottomNav">
+        <div class="row">
+            <div class="container col-md-2 col-md-offset-5 text-center hidden-xs hidden-sm">
+                <button type="button" class="btn btn-link" onclick="simulatePress(40);"><span class="glyphicon glyphicon-menu-up upButton" aria-hidden="true"></span></button>
+            </div>
+        </div>
         <div class="row portfolio">
             <div class="col-md-12 thumb">
                 <div class="caption text-center">
