--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="leftSidenav" class="leftSidenav">
         <div class="row about">
             <div class="col-md-4 col-md-offset-2">
-                <div class="square"></div>
+                <img src="http://placehold.it/600x400" />
             </div>
             <div class="col-md-4">
                 <h3>
@@ -162,36 +162,93 @@
                 <button type="button" class="btn btn-link" onclick="simulatePress(40);"><span class="glyphicon glyphicon-menu-up upButton" aria-hidden="true"></span></button>
             </div>
         </div>
-        <div class="row portfolio">
-            <div class="col-md-12 thumb">
-                <div class="caption text-center">
-                    <div class="content">
-                        <h1>Graphique</h1>
-                        <button type="button" onclick="location.href='http://data-visualisation-test.herokuapp.com'" class="btn btn-primary">Visit</button>
-                        <button type="button" onclick="location.href='https://github.com/Tehmo3/data_visualisation'" class="btn btn-danger">Source</button>
-                    </div>
-                </div>
-                <img src="images/project1.jpg" width="100%" />
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <img src="http://placehold.it/425x225" />
             </div>
-            <div class="col-md-12 thumb">
-                <div class="caption text-center">
-                    <div class="content">
-                        <h1>Placeholder</h1>
-                        <button type="button" class="btn btn-primary">Visit</button>
-                        <button type="button" class="btn btn-danger">Source</button>
-                    </div>
-                </div>
-                <img src="images/project2.jpg" width="100%" />
+            <div class="col-md-4 text-center">
+                <img src="http://placehold.it/425x225" />
             </div>
-            <div class="col-md-12 thumb">
-                <div class="caption text-center">
-                    <div class="content">
-                        <h1>Placeholder</h1>
-                        <button type="button" class="btn btn-primary">Visit</button>
-                        <button type="button" class="btn btn-danger">Source</button>
-                    </div>
-                </div>
-                <img src="images/project3.jpg" width="100%" />
+            <div class="col-md-4 text-center">
+                <img src="http://placehold.it/425x225" />
+            </div>
+        </div>
+        <div class="row aboutText">
+            <div class="col-md-4 text-center">
+                <h3>
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About.
+                </h3>
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Default</button>
+            </div>
+            <div class="col-md-4 text-center">
+                <h3>
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About.
+                </h3>
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Default</button>
+            </div>
+            <div class="col-md-4 text-center">
+                <h3>
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About.
+                </h3>
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Default</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <img src="http://placehold.it/425x225" />
+            </div>
+            <div class="col-md-4 text-center">
+                <img src="http://placehold.it/425x225" />
+            </div>
+            <div class="col-md-4 text-center">
+                <img src="http://placehold.it/425x225" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <h3>
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About.
+                </h3>
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Default</button>
+            </div>
+            <div class="col-md-4 text-center">
+                <h3>
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About.
+                </h3>
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Default</button>
+            </div>
+            <div class="col-md-4 text-center">
+                <h3>
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About.
+                </h3>
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Default</button>
             </div>
         </div>
     </div>
