remove buttons on mobile

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-1 col-md-offset-11">
+            <div class="col-md-1 col-md-offset-11 hidden-xs">
                 <button type="button" class="btn btn-link" onclick="simulatePress(39);"><span class="glyphicon glyphicon-menu-right backRight" aria-hidden="true"></span></button>
             </div>
         </div>
@@ -147,7 +147,7 @@
     </div>
     <div id="rightSidenav" class="rightSidenav">
         <div class="row vertical-align">
-            <div class="col-md-1">
+            <div class="col-md-1 hidden-xs">
                 <button type="button" class="btn btn-link" onclick="simulatePress(37);"><span class="glyphicon glyphicon-menu-left backLeft" aria-hidden="true"></span></button>
             </div>
             <div class="col-md-10 vertical-center">
