--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="col-md-4 col-md-offset-2">
                     <div class="circle center-block cursorChange">
                         <div class="circle inner center-block">
-                            <img src="images/me.jpg" class="circle inner2 center-block"/>
+                            <img src="images/me.jpg" class="circle inner2 center-block img-responsive"/>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
     <div id="leftSidenav" class="leftSidenav">
         <div class="row about">
             <div class="col-md-4 col-md-offset-2">
-                <img src="http://placehold.it/600x400" />
+                <img src="http://placehold.it/600x400" class="img-responsive" />
             </div>
             <div class="col-md-4">
                 <h3>
@@ -163,14 +163,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 text-center">
-                <img src="http://placehold.it/425x225" />
+            <div class="col-md-4 center-block">
+                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
-            <div class="col-md-4 text-center">
-                <img src="http://placehold.it/425x225" />
+            <div class="col-md-4 center-block">
+                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
-            <div class="col-md-4 text-center">
-                <img src="http://placehold.it/425x225" />
+            <div class="col-md-4 center-block">
+                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
         </div>
         <div class="row aboutText">
@@ -200,52 +200,6 @@
                     About. About. About. About. About. About. About. About.
                     About. About. About. About. About. About. About. About.
                     About. About. About. About. About. About.
-                </h3>
-                <button type="button" class="btn btn-default">Default</button>
-                <button type="button" class="btn btn-default">Default</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 text-center">
-                <img src="http://placehold.it/425x225" />
-            </div>
-            <div class="col-md-4 text-center">
-                <img src="http://placehold.it/425x225" />
-            </div>
-            <div class="col-md-4 text-center">
-                <img src="http://placehold.it/425x225" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 text-center">
-                <h3>
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About.
-                </h3>
-                <button type="button" class="btn btn-default">Default</button>
-                <button type="button" class="btn btn-default">Default</button>
-            </div>
-            <div class="col-md-4 text-center">
-                <h3>
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About.
-                </h3>
-                <button type="button" class="btn btn-default">Default</button>
-                <button type="button" class="btn btn-default">Default</button>
-            </div>
-            <div class="col-md-4 text-center">
-                <h3>
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About.
                 </h3>
                 <button type="button" class="btn btn-default">Default</button>
                 <button type="button" class="btn btn-default">Default</button>
